test/cases/compile_errors/stage1/obj/sub_overflow_in_function_evaluation.zig
const y = sub(10, 20);
fn sub(a: u16, b: u16) u16 {
    return a - b;
}

export fn entry() usize { return @sizeOf(@TypeOf(y)); }

// error
// backend=stage1
// target=native
//
// tmp.zig:3:14: error: operation caused overflow
